refactor: 환율 소수점 조건별 처리 로직 추가